<resources>
    <string name="app_name">BMITrackingAPP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title">BMI Calculator</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="remove">Hold a item to remove</string>
    <string name="bar_chart">Weight Over Time</string>
    <string name="bmi_chart">BMI Over Time</string>
</resources>